--- a/sdk-sample/build.gradle
+++ b/sdk-sample/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.kieronquinn.app.smartspacer.sdksample"
-        minSdk 29
+        minSdk 28
         targetSdk 34
         versionCode 2
         versionName "1.0"
@@ -29,6 +29,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '17'
+    }
+    buildFeatures {
+        buildConfig true
     }
 }
 
